--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ jmespath==0.9.4
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 oauthlib==3.0.2
+packaging==19.0
+pip-check-reqs==2.0.3
 pkg-resources==0.0.0
 praw==6.3.1
 prawcore==1.0.1
@@ -23,6 +25,7 @@ pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pylint==2.3.1
 pynamodb==3.4.0
+pyparsing==2.4.1.1
 python-dateutil==2.8.0
 requests==2.22.0
 requests-oauthlib==1.2.0
@@ -32,5 +35,6 @@ typed-ast==1.4.0
 update-checker==0.16
 uritemplate==3.0.0
 urllib3==1.25.3
+webencodings==0.5.1
 websocket-client==0.56.0
 wrapt==1.11.2
