travis cicd to lambda

--- a/src/common/config.ini
+++ b/src/common/config.ini
@@ -1,8 +1,15 @@
 [test]
 TeamId=14
 FootballApiHost=apihost
-FootballApiKey=apikey
 FootballApiBaseUrl=https://www.api-football.com/demo/api/v2/
 MaxApiCall=100
-SpreadSheetId=1yJQZ0rTdHt-f3NPUNt76K_xNjfMdIQdpii_PUUByN4Q
+SpreadSheetId=1mjQRZtVBNIEys801A3-8Sus5aVM0cCQ91bkMThGwbzg
 Subreddit=testabot
+
+[prod]
+TeamId=33
+MaxApiCall=2
+Subreddit=reddevils
+SpreadSheetId=1mjQRZtVBNIEys801A3-8Sus5aVM0cCQ91bkMThGwbzg
+FootballApiHost=api-football-v1.p.rapidapi.com
+FootballApiBaseUrl=https://api-football-v1.p.rapidapi.com/v2/
