--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ branches:
   only:
   - master
 before_install:
-- pip install --user awscli
+- pip install awscli
 - openssl aes-256-cbc -K $encrypted_e626a646b3fb_key -iv $encrypted_e626a646b3fb_iv -in ${TRAVIS_BUILD_DIR}/src/credentials.tar.enc -out ${TRAVIS_BUILD_DIR}/src/credentials.tar -d
 - tar xvf ${TRAVIS_BUILD_DIR}/src/credentials.tar
 install:
