--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ branches:
   - master
 before_install:
 - openssl aes-256-cbc -K $encrypted_e626a646b3fb_key -iv $encrypted_e626a646b3fb_iv
-  -in credentials.tar.enc -out credentials.tar -d
+  -in ${TRAVIS_BUILD_DIR}/src/credentials.tar.enc -out ${TRAVIS_BUILD_DIR}/src/credentials.tar -d
 - pip install awscli
 - tar xvf ${TRAVIS_BUILD_DIR}/src/credentials.tar
 install:
