--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ branches:
   only:
   - master
 before_install:
-- openssl aes-256-cbc -K $encrypted_e626a646b3fb_key -iv $encrypted_e626a646b3fb_iv
-  -in ${TRAVIS_BUILD_DIR}/src/credentials.tar.enc -out ${TRAVIS_BUILD_DIR}/src/credentials.tar -d
+- openssl aes-256-cbc -K $encrypted_42ddba2a9b3d_key -iv $encrypted_42ddba2a9b3d_iv
+  -in credentials.tar.enc -out src/credentials.tar -d
 - pip install awscli
 - tar xvf ${TRAVIS_BUILD_DIR}/src/credentials.tar
 install:
